--- a/src/Sections/Header/header.css
+++ b/src/Sections/Header/header.css
@@ -8,6 +8,7 @@ header .container {
     padding:30px 0px;
     align-items: center;
     position: relative;
+    
 }
 header .container .logo{
     width: 25%;
@@ -103,7 +104,7 @@ header .container nav ul li:not(:last-child) a{
     color: var(--text-normal);
 }
 header .container nav ul li.active:not(:last-child) a{
-    color: var(--text-color);
+    color: var(--text-color) !important;
 }
 header .container nav ul li:not(:last-child) a:hover{
     color: var(--text-color);
@@ -116,11 +117,11 @@ header .container nav ul li:last-child a{
     border-radius: 20px;
 }
 header .container nav ul li.active:last-child a{
-    background-color: var(--secondary_3-bg);
+    background-color: var(--secondary_3-bg) ;
 
 }
 header .container nav ul li.active:last-child a span{
-color:var(--text-light)
+color:var(--text-light) ;
 }
 header .container nav ul li:last-child a:hover{
 background-color: var(--secondary_3-bg);
@@ -147,6 +148,7 @@ header .container nav ul li:last-child a img{
     }
     header .container {
         padding: 15px 10px ;
+        width: 80%;
     }
     header .container .logo{
         
@@ -205,6 +207,10 @@ header .container nav ul li:last-child a img{
     }
     nav ul li:last-child a:hover span{
         color: var(--text-color) !important;
+    }
+    header .container nav ul li.active:last-child a span{
+        color: var(--text-color);
+    
     }
     nav ul a{
         width: 100%;
