--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -17,7 +17,9 @@
     color: var(--text-light);
 }
 @media (max-width:1000px) { 
-
+    .mainBanner{
+        padding: 80px 30px;    
+    }
     .mainBanner h1 {
         width: 80%;
         font-size: 30px;
@@ -51,7 +53,7 @@ align-content: center;
 justify-content: center;
 flex-direction: column;
 border-radius: 20px;
-height: 300px;
+height: fit-content;
 }
 .MostPopular .Card img {
 border-radius: 20px;
