--- a/src/Sections/Footer/footer.css
+++ b/src/Sections/Footer/footer.css
@@ -1,11 +1,21 @@
 footer {
     text-align: center;
     margin: 30px 0; 
-    color: #770;
-    font-size: clamp(12px,15px,15px);
+    color: rgb(0, 111, 119);
 }
 footer h3 {
+    font-size: 20px;
     margin-bottom: 10px;
     font-weight: 300;
 
+}
+@media (max-width:768px) {
+    footer h3{
+        font-size: 15px;
+    }
+    footer span{
+        font-size: 14px;
+        font-weight: bold;
+    }
+    
 }
