--- a/src/Pages/Details/details.css
+++ b/src/Pages/Details/details.css
@@ -6,6 +6,7 @@
     text-transform: uppercase;
     font-weight: 700;
     text-align: center;
+    font-family: var(--font-black-italic);
 }
 .FortniteDetails .imgs {
     display: flex;
@@ -39,6 +40,8 @@
 .Download_fortNight {
     background: var(--main-bg);
     padding: 30px;
+    font-family: var(--font-normal);
+
 }
 .Download_fortNight .row-1 {
     display: flex;
@@ -144,6 +147,7 @@ color: var(--text-normal);
     padding: 20px;
     padding-bottom: 70px;
     position: relative;
+    font-family: var(--font-normal);
 }
 .Other_Related .rows {
 display: flex;
